# spalign

./: .envrc.sample  .gitignore  app.py  pyproject.toml
data/: upload_persona.py  upload_scenario.py
scripts/evaluation/: evaluate_illogical.py  evaluate_satisfaction.py  illogical copy.py  illogical.py  satisfaction.py  upload_illogical.py
scripts/generation/: concatenate_scene.py  conversation.py  conversation.slurm  generate_conversation.py  generate_persona.py  generate_scenario.py  scenario.py  upload_conversation.py  upload_scenario.py
src/spalign/: __init__.py  batcher.py  conversation.py  database.py  models.py  persona.py  personas.py  scenario.py  utils.py
src/spalign/evaluation/: base.py
src/spalign/projects/happyrat/: atla.txt  cammy.txt  chunta.txt  fuwamichi.txt  generate_character_info.py  happyrat.py  harada.txt  jiro.txt  kamiyama.txt  kodama.txt  kyuusuke.txt  maro.txt  mel.txt  mikko.txt  mofuhiko.txt  momoka.txt  poporo.txt  profiles.py  shacho.txt  shion.txt  soyogi.txt  soyogisoyogi.txt  yamamurakosuke.txt  yoshida.txt
