[project]
name = "spalign"
version = "0.1.0"
description = "Conversation generation library with vLLM and OpenAI integration"
readme = "README.md"
authors = [{ name = "ksterx", email = "kostonerx@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.29",
    "loguru>=0.7.3",
    "transformers>=4.55.0",
]

[project.scripts]
generate-conversation = "scripts.generate_conversation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
